--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,8 +1,8 @@
 {
-  "manifest_version": 2,
-  "name": "Ext",
+  "manifest_version": 3,
+  "name": "Hordie",
   "version": "0.1.0",
-  "description": "My Chrome Extension",
+  "description": "Horde your tabs for later",
   "icons": {
     "16": "icons/icon_16.png",
     "32": "icons/icon_32.png",
@@ -10,27 +10,15 @@
     "128": "icons/icon_128.png"
   },
   "background": {
-    "scripts": [
-      "background.js"
-    ],
-    "persistent": false
+    "service_worker": "background.js"
   },
-  "browser_action": {
-    "default_title": "Ext",
-    "default_popup": "popup.html"
+  "action": {
+    "default_title": "Horde tabs"
   },
   "permissions": [
-    "storage"
+    "storage",
+    "tabs",
+    "tabGroups"
   ],
-  "content_scripts": [
-    {
-      "matches": [
-        "<all_urls>"
-      ],
-      "run_at": "document_idle",
-      "js": [
-        "contentScript.js"
-      ]
-    }
-  ]
+  "minimum_chrome_version": "89"
 }
