--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,8 +1,9 @@
 {
   "manifest_version": 3,
-  "name": "Hordie",
+  "name": "__MSG_ext_name__",
+  "short_name": "Hoardie",
   "version": "0.1.0",
-  "description": "Horde your tabs for later",
+  "description": "__MSG_ext_desc__",
   "icons": {
     "16": "icons/icon_16.png",
     "32": "icons/icon_32.png",
@@ -13,18 +14,19 @@
     "service_worker": "background.js"
   },
   "action": {
-    "default_title": "Horde tabs",
+    "default_title": "__MSG_ext_action_title__",
     "default_icon": {
       "16": "icons/filter-16.png",
       "24": "icons/filter-24.png",
       "32": "icons/filter-32.png"
     }
   },
+  "default_locale": "en",
   "permissions": [
     "storage",
     "tabs",
     "tabGroups",
     "contextMenus"
   ],
-  "minimum_chrome_version": "89"
+  "minimum_chrome_version": "88"
 }
