--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,10 +5,7 @@
   "version": "0.1.0",
   "description": "__MSG_ext_desc__",
   "icons": {
-    "16": "icons/icon_16.png",
-    "32": "icons/icon_32.png",
-    "48": "icons/icon_48.png",
-    "128": "icons/icon_128.png"
+    "128": "icons/icon-128.png"
   },
   "background": {
     "service_worker": "background.js"
@@ -16,9 +13,9 @@
   "action": {
     "default_title": "__MSG_ext_action_title__",
     "default_icon": {
-      "16": "icons/filter-16.png",
-      "24": "icons/filter-24.png",
-      "32": "icons/filter-32.png"
+      "16": "icons/box-16.png",
+      "24": "icons/box-24.png",
+      "32": "icons/box-32.png"
     }
   },
   "default_locale": "en",
