--- a/package.json
+++ b/package.json
@@ -19,15 +19,11 @@
     "svelte": "^3.38.2",
     "svelte-loader": "^3.1.1",
     "svelte-preprocess": "^4.7.3",
-    "webpack": "^5.36.2",
+    "webpack": "^5.69.1",
     "webpack-cli": "^4.7.0",
     "webpack-merge": "^5.7.3"
   },
   "dependencies": {
-    "@material/button": "^11.0.0",
-    "@material/dialog": "^11.0.0",
-    "canvg": "^3.0.7",
-    "date-fns": "^2.21.3",
-    "lit-element": "^2.5.1"
+    "date-fns": "^2.21.3"
   }
 }
